v3.0.0

New features:

- You can monitor multiple webpages at the same time.
- Support multiple receivers.
- You can view logs in execution.log file.

Refactors:

- put the logic that get target page content into one function
- put the logic that init email util instance and get receiver email in a function
- separate the notify function from the website monitor

v2.0.0

features:

- You don't need to restart the script after changing the settings in every setting file. (i.e. Once your change settings in the setting file, the script will automatically apply the settings.)

v1.0.1

features:

- You can do not restart the script after only changing email settings (either sender or receiver).

v1.0.0

In this release, include the following features:

- Monitor the specified webpage, if the webpage is updated, send a notification to the specified email address. In the notification email, the content of changes in the webpage is included.
- You can specify the interval of monitoring.
- You can set sender and receiver of the notification email.